--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -21,4 +21,4 @@ jobs:
           token: ${{ secrets.TOKEN }}
         continue-on-error: true
       - name: Print merge outcome
-        run: echo ${{ steps.merge-upstream.outputs }}
+        run: echo ${{ toJson(steps) }}
