--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -20,5 +20,8 @@ jobs:
           branch: master
           token: ${{ secrets.TOKEN }}
         continue-on-error: true
-      - name: Print merge outcome
-        run: echo ${{ toJson(steps) }}
+      - name: Check if any change merged
+        if: steps.merge-upstream.outputs.status == 'failure'
+        run: echo 'No changes merged. Skipping.'; exit 0
+      - name: Build Docker image
+        run: echo 'TODO build Docker image'
