--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -15,7 +15,7 @@ jobs:
           image: myoung34/github-runner
           max-age-minutes: 15
           tag-regex: ^\\d+\\.\\d+\\.\\d+$
-          username: horca
+          username: horcicko.michal@gmail.com
           password: ${{ secrets.DOCKER_PASS }}
         id: scan
       - name: Print
