--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,29 +1,20 @@
-name: "Publish to Docker"
-description: "Pushes built artifacts to Docker"
+name: Build, push and deploy new GitHub runner image
 
 on:
-  workflow_dispatch
+  workflow_call:
+    inputs:
+      tag:
+        required: true
+        type: string
 
-inputs:
-  registry_username:
-    description: “Username for image registry”
-    required: true
-  registry_password:
-    description: “Password for image registry”
-    required: true
-
-runs:
-  using: "composite"
-  steps:
-      - uses: docker/setup-buildx-action@v1
-
-      - uses: docker/login-action@v1
+jobs:
+  build-runner-image:
+    name: Build new runner image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print tag
+        run: echo ${{ inputs.tag }}
+      - name: Checkout the repository
+        uses: actions/checkout@v3
         with:
-          username: ${{inputs.registry_username}}
-          password: ${{inputs.registry_password}}
-
-      - uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: user/app:latest
+          fetch-depth: 0
